--- a/favorit.html
+++ b/favorit.html
@@ -33,179 +33,153 @@
         </div>
     </div>
 <!--------------------------favorit------------------------------->
-    <div class="content">
-        <h2>
-            Favorit
-        </h2>
-        <div class="food-item">
-            <img alt="Image of Dimsum Mentai" height="100"
-                src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Dimsum Mentai
-                </h3>
-                <p>
-                    Makanan | Socha
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    4.9 (156) | 0.5km | 10min
-                </p>
-                <span class="discount">
-                    Diskon 101%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
+<div class="content">
+    <h2>Favorit</h2>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
         </div>
-        <div class="food-item">
-            <img alt="Image of Bubur Ayam H. Syukur" height="100"
-                src="https://storage.googleapis.com/a1aa/image/ng1W0QeOrKWKMKcwUKP3wjGnC0zEpc6Hmrb9hzDLwoh0t02JA.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Bubur Ayam H. Syukur
-                </h3>
-                <p>
-                    Bubur | Warung H.Syukur
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    1.2 (1000) | 1km | 20min
-                </p>
-                <span class="discount">
-                    Diskon 100%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
-        </div>
-        <div class="food-item">
-            <img alt="Image of Salad Buah" height="100"
-                src="https://storage.googleapis.com/a1aa/image/bxLCcqRc5XI1NNIeCQdfCqlEVn9TpbUfAfc5x86qqeGFcLtdC.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Salad Buah
-                </h3>
-                <p>
-                    Salad | King Stone
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    1.2 (523) | 10km | 30min
-                </p>
-                <span class="discount">
-                    Diskon 100%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
-        </div>
-        <div class="food-item">
-            <img alt="Image of Chinese Food 38" height="100"
-                src="https://storage.googleapis.com/a1aa/image/Mqlvv4vlZ8qBJxhn39R5KFBt7WfkFDXfRndntxoTBxfJ3SbnA.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Chinese Food 38
-                </h3>
-                <p>
-                    Makanan | Socha
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    4.9 (156) | 0.5km | 10min
-                </p>
-                <span class="discount">
-                    Diskon 101%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
-        </div>
-        <div class="food-item">
-            <img alt="Image of Penyetan Pak Kasno" height="100"
-                src="https://storage.googleapis.com/a1aa/image/P9fDyfjVqIubgUyBa80YLCUd3VDTqiLfloYIksaueuMcul2OB.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Penyetan Pak Kasno
-                </h3>
-                <p>
-                    Ayam | Warung Pak Kasno
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    1.2 (1000) | 1km | 20min
-                </p>
-                <span class="discount">
-                    Diskon 100%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
-        </div>
-        <div class="food-item">
-            <img alt="Image of Kedai Seblak" height="100"
-                src="https://storage.googleapis.com/a1aa/image/LLRnqlxT4TrLH1SFriifMmlGfO5XQOWjzEWpzRu1TePV3SbnA.jpg"
-                width="100" />
-            <div class="details">
-                <h3>
-                    Kedai Seblak
-                </h3>
-                <p>
-                    Seblak | Seblak Hot Hot
-                </p>
-                <p class="rating">
-                    <i class="fas fa-star">
-                    </i>
-                    1.2 (1000) | 1km | 20min
-                </p>
-                <span class="discount">
-                    Diskon 100%
-                </span>
-                <span class="discount">
-                    Diskon Ongkir
-                </span>
-            </div>
-            <div class="favorite">
-                <i class="fas fa-heart">
-                </i>
-            </div>
-        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
     </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <div class="food-item">
+        <img alt="Image of Dimsum Mentai" height="100" src="https://storage.googleapis.com/a1aa/image/yYIPIvebbv0fs0OthGXPMeOgnE9fqfKBlN62imJ5npExcLtdC.jpg" width="100" />
+        <div class="details">
+            <h3>Dimsum Mentai</h3>
+            <p>Makanan | Socha</p>
+            <p class="rating"><i class="fas fa-star"></i> 4.9 (156) | 0.5km | 10min</p>
+            <span class="discount">Diskon 101%</span>
+            <span class="discount">Diskon Ongkir</span>
+        </div>
+        <div class="favorite"><i class="fas fa-heart"></i></div>
+    </div>
+    <!-- Tambahkan item makanan lainnya di sini -->
+</div>
 
 <!---------------------favorit---------------------------->
     <div class="footer">
