--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
                     <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
                     <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
                     <li class="nav-item d-flex align-items-center">
-                        <a class="nav-link" href="akun.html">Account</a>
-                        <i class="fas fa-shopping-cart cart-icon"></i>
+                        <a class="nav-link" href="akun.html">Akun</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="keranjang.html">Keranjang</a>
+                        <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
                     </li>
                 </ul>
             </div>
