--- a/notifikasi_pesan.html
+++ b/notifikasi_pesan.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -28,10 +29,13 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pesan.html">Pesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
                     <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
                     <li class="nav-item d-flex align-items-center">
-                        <a class="nav-link" href="#">Account</a>
+                        <a class="nav-link" href="akun.html">Akun</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="keranjang.html">Keranjang</a>
                         <i class="fas fa-shopping-cart cart-icon"></i>
                     </li>
                 </ul>
@@ -57,7 +61,7 @@
             Pesan (3)
         </div>
     </div>
-    <a class="nav-link" href="index.html">
+    <a class="nav-link" href="pesan.html">
     <div class="notification-item">
         <img alt="Profile picture of Agus - Driver" height="50"
             src="https://storage.googleapis.com/a1aa/image/2zMfbeZYTFhsH0wjdQbbXrLgOKuAfDmJR8AkPr5JAH5OOUbnA.jpg"
