--- a/pesanan_diproses.html
+++ b/pesanan_diproses.html
@@ -1,21 +1,18 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="id">
 <head>
-    <title>
-        Pesanan Saya
-    </title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="style css/pesanan_diproses.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pesanan Diproses - Geprek Bensu</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome untuk icon -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style css/navbar.css">
-
+    <link rel="stylesheet" href="style css/pesanan_diproses.css">
 
 </head>
-
 <body>
-
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
@@ -33,138 +30,103 @@
                         <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
                         <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
                         <li class="nav-item d-flex align-items-center">
-                            <a class="nav-link" href="akun.html">Account</a>
-                            <i class="fas fa-shopping-cart cart-icon"></i>
+                            <a class="nav-link" href="akun.html">Akun</a>
+                        </li>
+                        <li class="nav-item d-flex align-items-center">
+                            <a class="nav-link" href="keranjang.html">Keranjang</a>
+                            <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-    <!-- <div class="header">
-        <i class="fas fa-arrow-left back-icon">
-        </i>
-        <h1>
-            Pesanan Saya
-        </h1>
-        <i class="fas fa-comment-dots chat-icon">
-        </i>
-    </div> -->
-    <ul class="nav nav-tabs justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">
-                Diproses
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="riwayat_pesanan.html">
-                Riwayat
-            </a>
-        </li>
-    </ul>
-    <div class="container mt-3">
+    <!-- Daftar Pesanan -->
+    <div class="container">
         <div class="order-card">
-            <div class="order-info">
-                <div class="order-details">
-                    <img alt="Pizza Hot" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/ZtgebVuYEQzAMq7SsJ0wdicQOvOs3Xe3WxlNeWFAQaWDCUbnA.jpg"
-                        width="50" />
-                    <div class="order-text">
-                        <div class="price">
-                            Rp.50.000
-                        </div>
-                        <div class="name">
-                            Pizza Hot
-                        </div>
-                        <div class="items">
-                            03 Items
-                        </div>
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h5 class="mb-0">Detail Pesanan</h5>
+                <span class="status-badge">Diproses</span>
+            </div>
+
+            <div class="order-item">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <strong>Pesanan #INV-20231214-001</strong>
+                        <small class="d-block text-muted">14 Des 2023, 14:30 WIB</small>
                     </div>
                 </div>
-                <div class="order-id">
-                    #162432
-                </div>
             </div>
-            <div class="order-actions">
-                <button class="btn btn-track">
-                    <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
-                    Lacak Pesanan
-                    </a>
-                </button>
-                <button class="btn btn-cancel">
-                    Batalkan
-                </button>
-            </div>
-        </div>
-        <div class="order-card">
-            <div class="order-info">
-                <div class="order-details">
-                    <img alt="French Fries" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/UVn0ridTrzKtC10B4QuRmRWo9wsfEcyTJVpo6Sx7OeDCBqtTA.jpg"
-                        width="50" />
-                    <div class="order-text">
-                        <div class="price">
-                            Rp.80.235
-                        </div>
-                        <div class="name">
-                            French Fries
-                        </div>
-                        <div class="items">
-                            12 Items
-                        </div>
+
+            <div class="order-item">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <span>Ayam Geprek Bensu</span>
+                        <small class="d-block text-muted">2x • Pedas Level 3</small>
                     </div>
-                </div>
-                <div class="order-id">
-                    #242432
+                    <span>Rp 30.000</span>
                 </div>
             </div>
-            <div class="order-actions">
-                <button class="btn btn-track">
-                    <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
-                    Lacak Pesanan
-                    </a>
-                </button>
-                <button class="btn btn-cancel">
-                    Batalkan
-                </button>
-            </div>
-        </div>
-        <div class="order-card">
-            <div class="order-info">
-                <div class="order-details">
-                    <img alt="Starbaks" height="50"
-                        src="https://storage.googleapis.com/a1aa/image/weg7KUkvMjxYKSbiw7HGdoQdKr2KP25WoM6APybn2qlfAqtTA.jpg"
-                        width="50" />
-                    <div class="order-text">
-                        <div class="price">
-                            Rp.21.000
-                        </div>
-                        <div class="name">
-                            Starbaks
-                        </div>
-                        <div class="items">
-                            01 Items
-                        </div>
+
+            <div class="order-item">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <span>Es Teh Manis</span>
+                        <small class="d-block text-muted">1x</small>
                     </div>
-                </div>
-                <div class="order-id">
-                    #240112
+                    <span>Rp 5.000</span>
                 </div>
             </div>
-            <div class="order-actions">
-                <button class="btn btn-track">
-                    <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
-                    Lacak Pesanan
-                    </a>
-                </button>
-                <button class="btn btn-cancel">
-                    Batalkan
+
+            <div class="order-item">
+                <div class="d-flex justify-content-between">
+                    <span>Subtotal</span>
+                    <span>Rp 35.000</span>
+                </div>
+            </div>
+
+            <div class="order-item">
+                <div class="d-flex justify-content-between">
+                    <span>Ongkos Kirim</span>
+                    <span>Rp 10.000</span>
+                </div>
+            </div>
+
+            <div class="order-item">
+                <div class="d-flex justify-content-between">
+                    <strong>Total Pembayaran</strong>
+                    <strong>Rp 45.000</strong>
+                </div>
+            </div>
+
+            <div class="mt-3">
+                <button class="btn btn-track w-100">
+                    <i class="fas fa-map-marker-alt me-2"></i>Lacak Pesanan
                 </button>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <!-- Informasi Pengiriman -->
+    <div class="container mt-3">
+        <div class="order-card">
+            <h5 class="mb-3">Informasi Pengiriman</h5>
+            <div class="order-item">
+                <div>
+                    <strong>Anastasya Rosalin</strong>
+                    <small class="d-block text-muted">+62 8566946659</small>
+                </div>
+            </div>
+            <div class="order-item">
+                <span>Ds. Sidorekso</span>
+            </div>
+            <div class="order-item">
+                <span>Metode Pembayaran: Transfer Bank</span>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
