--- a/riwayat_pesanan.html
+++ b/riwayat_pesanan.html
@@ -14,31 +14,33 @@
 </head>
 
 <body>
-
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <span class="speed-text">Speed</span>
-                    <span class="dish-text">Dish</span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
-                        <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
-                        <li class="nav-item d-flex align-items-center">
-                            <a class="nav-link" href="akun.html">Account</a>
-                            <i class="fas fa-shopping-cart cart-icon"></i>
-                        </li>
-                    </ul>
-                </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <span class="speed-text">Speed</span>
+                <span class="dish-text">Dish</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="akun.html">Akun</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="keranjang.html">Keranjang</a>
+                        <i class="fas fa-shopping-cart cart-icon"></i>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
     <!-- <div class="header">
         <i class="fas fa-arrow-left back-icon">
         </i>
