--- a/detail_menu.html
+++ b/detail_menu.html
@@ -23,7 +23,10 @@
                     Deskripsi singkat mengenai menu ini. Terbuat dari bahan berkualitas dan disajikan dengan rasa terbaik.
                 </p>
                 <p class="menu-price">Harga: <span>Rp 25.000</span></p>
-                <button class="btn-order">Pesan Sekarang</button>
+                <div style="margin-top: 10px;">
+                    <button class="btn-order">Pesan Sekarang</button>
+                    <button class="btn-favorite">Tambahkan ke Favorit</button>
+                </div>
             </div>
         </section>
     </div>
