--- a/metode_bayar.html
+++ b/metode_bayar.html
@@ -21,15 +21,14 @@
 
       <div class="card">
         <address>
-          Adam Johnson<br />
-          403 Oakland Ave Street, A city, Florida, 32104,<br />
-          United States of America
+          Anassasya<br />
+          kudus, kaliwungu, Sidorekso Rt10 Rw10<br />
         </address>
       </div>
     </div>
 
     <fieldset>
-      <legend>Payment Method</legend>
+      <legend>Metode Pembayaran</legend>
 
       <div class="form__radios">
         <div class="form__radio">
@@ -85,7 +84,7 @@
     <div>
       <button class="button button--full" type="submit"><svg class="icon">
           <use xlink:href="#icon-shopping-bag" />
-        </svg>Buy Now</button>
+        </svg>beli sekarang</button>
     </div>
   </form>
 </div>
