--- a/metode_bayar.html
+++ b/metode_bayar.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Checkout Form</title>
+  <title>pembayaran</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="style css/pembayaran.css" /><link rel="stylesheet" href="style css/pembayaran.css">
@@ -11,9 +11,12 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="iphone">
-  <header class="header">
-    <h1>Checkout</h1>
-  </header>
+    <div class="header">
+        <a href="index.html" class="back-button">
+            <i class="fas fa-arrow-left"></i> Kembali
+        </a>
+        <h1 class="text-center">Metode Pembayaran</h1>
+    </div>
 
   <form action="https://httpbin.org/post" class="form" method="POST">
     <div>
@@ -46,6 +49,11 @@
         </div>
 
         <div class="form__radio">
+          <label for="dana"><img src="image/logo/logo-dana.png" alt="Dana" width="50" /> Dana</label>
+  <input id="dana" name="payment-method" type="radio" />
+</div>
+        
+        <div class="form__radio">
           <label for="mastercard"><svg class="icon">
               <use xlink:href="#icon-mastercard" />
             </svg>Master Card</label>
@@ -54,37 +62,12 @@
       </div>
     </fieldset>
 
-    <div>
-      <h2>Shopping Bill</h2>
-
-      <table>
-        <tbody>
-          <tr>
-            <td>Shipping fee</td>
-            <td align="right">$5.43</td>
-          </tr>
-          <tr>
-            <td>Discount 10%</td>
-            <td align="right">-$1.89</td>
-          </tr>
-          <tr>
-            <td>Price Total</td>
-            <td align="right">$84.82</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td>Total</td>
-            <td align="right">$88.36</td>
-          </tr>
-        </tfoot>
-      </table>
-    </div>
+   
 
     <div>
       <button class="button button--full" type="submit"><svg class="icon">
           <use xlink:href="#icon-shopping-bag" />
-        </svg>beli sekarang</button>
+        </svg>Pilih metode pembayaran</button>
     </div>
   </form>
 </div>
