--- a/metode_bayar.html
+++ b/metode_bayar.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="iphone">
+<div class="container">
     <div class="header">
         <a href="index.html" class="back-button">
             <i class="fas fa-arrow-left"></i> Kembali
@@ -65,10 +65,10 @@
    
 
     <div>
-      <button class="button button--full" type="submit"><svg class="icon">
-          <use xlink:href="#icon-shopping-bag" />
-        </svg>Pilih metode pembayaran</button>
     </div>
+    <button class="button pilih-pembayaran" type="button"  onclick="window.location.href='checkout.html'"><svg class="icon" >
+        <use xlink:href="#icon-shopping-bag" />
+      </svg>Pilih metode pembayaran</button>
   </form>
 </div>
 
