--- a/detail_menu.html
+++ b/detail_menu.html
@@ -46,7 +46,7 @@
 
     <!-- Gambar Menu -->
     <div class="container mb-3">
-        <img src="image/french fries.jpg" alt="Ayam Geprek Original" class="menu-image rounded">
+        <img src="image/geprek.jpg" alt="Ayam Geprek Original" class="menu-image rounded">
     </div>
 
     <!-- Informasi Menu -->
