--- a/pesanan_diproses.html
+++ b/pesanan_diproses.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,36 +13,48 @@
     <link rel="stylesheet" href="style css/pesanan_diproses.css">
 
 </head>
+
 <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <span class="speed-text">Speed</span>
-                    <span class="dish-text">Dish</span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
-                        <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
-                        <li class="nav-item d-flex align-items-center">
-                            <a class="nav-link" href="akun.html">Akun</a>
-                        </li>
-                        <li class="nav-item d-flex align-items-center">
-                            <a class="nav-link" href="keranjang.html">Keranjang</a>
-                            <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
-                        </li>
-                    </ul>
-                </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <span class="speed-text">Speed</span>
+                <span class="dish-text">Dish</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="akun.html">Akun</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="keranjang.html">Keranjang</a>
+                        <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
+
+
+
     <!-- Daftar Pesanan -->
-    <div class="container">
+    <div class="container mt-4">
+        <!-- Header Favorit -->
+        <div class="container-fluid bg-white shadow-sm py-3 mb-3">
+            <div class="container d-flex align-items-center">
+                <a href="#" class="text-dark me">
+                </a>
+                <h5 class="mb-0">Pesanan Diproses</h5>
+            </div>
+        </div>
         <div class="order-card">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h5 class="mb-0">Detail Pesanan</h5>
@@ -129,4 +142,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
