--- a/keranjang.html
+++ b/keranjang.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,42 +11,48 @@
     <link rel="stylesheet" href="style css/keranjang.css">
     <link rel="stylesheet" href="style css/navbar.css">
 </head>
+
 <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <span class="speed-text">Speed</span>
-                    <span class="dish-text">Dish</span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
-                        <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
-                        <li class="nav-item d-flex align-items-center">
-                            <a class="nav-link" href="akun.html">Akun</a>
-                        </li>
-                        <li class="nav-item d-flex align-items-center">
-                            <a class="nav-link" href="keranjang.html">Keranjang</a>
-                            <i class="fas fa-shopping-cart cart-icon"></i>
-                        </li>
-                    </ul>
-                </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <span class="speed-text">Speed</span>
+                <span class="dish-text">Dish</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="akun.html">Akun</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="keranjang.html">Keranjang</a>
+                        <i class="fas fa-shopping-cart cart-icon"></i>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    <div class="container">
-        <header class="header">
-            <h1>Keranjang Belanja</h1>
-        </header>
+        </div>
+    </nav>
+    <div class="container mt-3">
+        <!-- Header Favorit -->
+        <div class="container-fluid bg-white shadow-sm py-3 mb-3">
+            <div class="container d-flex align-items-center">
+                <a href="#" class="text-dark me">
+                </a>
+                <h5 class="mb-0">Keranjang</h5>
+            </div>
+        </div>
         <section class="cart">
             <!-- <p class="cart-message">Selamat datang di keranjang belanja Anda! Berikut adalah item yang telah Anda pilih:</p> -->
             <div class="cart-item">
-                <img src="/image/menu-sample.jpg" alt="Menu Item" class="item-image">
+                <img src="image/Beef Blackpepper.png" alt="Menu Item" class="item-image">
                 <div class="item-details">
                     <h2 class="item-title">Nama Menu 1</h2>
                     <p class="item-description">Deskripsi singkat mengenai menu ini.</p>
@@ -58,7 +65,7 @@
                 <button class="btn-remove">Hapus</button>
             </div>
             <div class="cart-item">
-                <img src="/image/menu-sample2.jpg" alt="Menu Item" class="item-image">
+                <img src="/image/tahu cabe garam.png" alt="Menu Item" class="item-image">
                 <div class="item-details">
                     <h2 class="item-title">Nama Menu 2</h2>
                     <p class="item-description">Deskripsi singkat mengenai menu ini.</p>
@@ -73,12 +80,17 @@
             <div class="cart-summary">
                 <h2>Total Harga: <span id="total-price">Rp 55.000</span></h2>
                 <a class="navbar-brand" href="checkout.html">
-                <button class="btn-checkout">Checkout</button>
+                    <button class="btn-checkout">Checkout</button>
                 </a>
             </div>
         </section>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
