--- a/notifikasi_pesan.html
+++ b/notifikasi_pesan.html
@@ -1,17 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="id">
 
 <head>
-    <title>
-        Notifikasi
-    </title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notifikasi Driver</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style css/notifikasi_pesan.css">
     <link rel="stylesheet" href="style css/navbar.css">
-    <link rel="stylesheet" href="style css/footer.css">
-    
+
+
 </head>
 
 <body>
@@ -36,57 +35,92 @@
                     </li>
                     <li class="nav-item d-flex align-items-center">
                         <a class="nav-link" href="keranjang.html">Keranjang</a>
-                        <i class="fas fa-shopping-cart cart-icon"></i>
+                        <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!-- <div class="header">
-        <i class="fas fa-arrow-left back-button">
-        </i>
-        <span>
-            Notifikasi
-        </span>
-        <a class="nav-link" href="keranjang.html">
-        <i class="fas fa-shopping-cart cart-button">
-        </i>
-    </div> -->
-    <a class="nav-link" href="notifikasi_pesan.html">
-    <div class="tabs">
-        <div class="tab">
-            Notifikasi
+
+    <div class="container mt-2">
+        <!-- Header Favorit -->
+        <div class="container-fluid bg-white shadow-sm py-3 mb-3">
+            <div class="container d-flex align-items-center">
+                <a href="#" class="text-dark me">
+                </a>
+                <h5 class="mb-0">Notifikasi</h5>
+            </div>
         </div>
-        <div class="tab active">
-            Pesan (3)
+        <div class="row">
+            <div class="col-12">
+                <div class="card mb-3 notification-item unread">
+                    <div class="card-body d-flex align-items-center">
+                        <div class="me-3">
+                            <i class="fas fa-motorcycle text-primary fa-2x"></i>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h6 class="mb-1">Pesanan Sedang Dalam Perjalanan</h6>
+                            <p class="text-muted mb-1">Driver Budi sedang menuju lokasi Anda</p>
+                            <span class="notification-time">Baru saja</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-chevron-right text-muted"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 notification-item">
+                    <div class="card-body d-flex align-items-center">
+                        <div class="me-3">
+                            <i class="fas fa-check-circle text-success fa-2x"></i>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h6 class="mb-1">Pesanan Selesai</h6>
+                            <p class="text-muted mb-1">Pesanan dari Restoran Pizza Mania telah sampai</p>
+                            <span class="notification-time">30 menit yang lalu</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-chevron-right text-muted"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 notification-item">
+                    <div class="card-body d-flex align-items-center">
+                        <div class="me-3">
+                            <i class="fas fa-utensils text-warning fa-2x"></i>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h6 class="mb-1">Pesanan Sedang Diproses</h6>
+                            <p class="text-muted mb-1">Warung Seafood sedang menyiapkan pesanan Anda</p>
+                            <span class="notification-time">1 jam yang lalu</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-chevron-right text-muted"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 notification-item">
+                    <div class="card-body d-flex align-items-center">
+                        <div class="me-3">
+                            <i class="fas fa-map-marker-alt text-danger fa-2x"></i>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h6 class="mb-1">Driver Telah Sampai</h6>
+                            <p class="text-muted mb-1">Driver Sushi Express telah tiba di lokasi Anda</p>
+                            <span class="notification-time">Kemarin</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-chevron-right text-muted"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <a class="nav-link" href="pesan.html">
-    <div class="notification-item">
-        <img alt="Profile picture of Agus - Driver" height="50"
-            src="https://storage.googleapis.com/a1aa/image/2zMfbeZYTFhsH0wjdQbbXrLgOKuAfDmJR8AkPr5JAH5OOUbnA.jpg"
-            width="50" />
-        <div class="details"> 
-            <div class="name">
-                Agus - Driver
-            </div>
-            <div>
-                K 6078 KK
-            </div>
-            <div class="time">
-                20 min ago
-            </div>
-        </div>
-        <i class="fas fa-chevron-right">
-        </i>
-    </div>
-    <footer class="footer text-center">
-        <p>&copy; 2024 Food App | <a href="#">Privacy Policy</a></p>
-    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
