--- a/riwayat_pesanan.html
+++ b/riwayat_pesanan.html
@@ -1,13 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="id">
 
 <head>
-    <title>
-        Pesanan Saya
-    </title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Riwayat Pesanan - Geprek Bensu</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome untuk icon -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style css/riwayat_pesanan.css">
     <link rel="stylesheet" href="style css/navbar.css">
 
@@ -35,153 +36,132 @@
                     </li>
                     <li class="nav-item d-flex align-items-center">
                         <a class="nav-link" href="keranjang.html">Keranjang</a>
-                        <i class="fas fa-shopping-cart cart-icon"></i>
+                        <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!-- <div class="header">
-        <i class="fas fa-arrow-left back-icon">
-        </i>
-        <h4 class="text-center">
-            Pesanan Saya
-        </h4>
-        <i class="fas fa-comment-dots chat-icon">
-        </i>
-    </div> -->
-    <div class="tab-menu">
 
-        <div>
-            <a href="pesanan_diproses.html" class="text-decoration-none text-dark">
-            Diproses
-            </a>
+    <div class="container mt-3">
+        <!-- Header Favorit -->
+        <div class="container-fluid bg-white shadow-sm py-3 mb-3">
+            <div class="container d-flex align-items-center">
+                <a href="#" class="text-dark me">
+                </a>
+                <h5 class="mb-0">Riwayat Pesanan</h5>
+            </div>
         </div>
-        <div class="active">
-            Riwayat
-        </div>
-    </div>
-    <div class="order-item">
-        <img alt="Pizza Hot" height="60"
-            src="https://storage.googleapis.com/a1aa/image/4p8KBzQFA3a2O19CYs66vWSnTa1tF5oZSo5mMLcazefRGqtTA.jpg"
-            width="60" />
-        <div class="order-details">
-            <h5>
-                Pizza Hot
-            </h5>
-            <p>
-                Rp.50.000 | 03 Items
-            </p>
-        </div>
-        <div class="order-actions">
-            <button class="btn btn-warning">
-                Beri Ulasan
-            </button>
-            <button class="btn btn-outline-warning">
-                Order Lagi
-            </button>
-        </div>
-        <div class="order-id">
-            <p>
-                #162432
-            </p>
-        </div>
-    </div>
-    <div class="order-item">
-        <img alt="McDonaldTramp" height="60"
-            src="https://storage.googleapis.com/a1aa/image/aZjzqYLFxFYTLpELeHNVjknusi8D5s3cKzM9BogidqQHD12JA.jpg"
-            width="60" />
-        <div class="order-details">
-            <h5>
-                McDonaldTramp
-            </h5>
-            <p>
-                Rp.80.235 | 02 Items
-            </p>
-        </div>
-        <div class="order-actions">
-            <button class="btn btn-warning">
-                Beri Ulasan
-            </button>
-            <button class="btn btn-outline-warning">
-                Order Lagi
-            </button>
-        </div>
-        <div class="order-id">
-            <p>
-                #242432
-            </p>
-        </div>
-    </div>
-    <div class="order-item">
-        <img alt="Starbaks" height="60"
-            src="https://storage.googleapis.com/a1aa/image/O3keaGUoaTV2Myaitg96NPq6fBE738BIsNLPr1t19OJUGqtTA.jpg"
-            width="60" />
-        <div class="order-details">
-            <h5>
-                Starbaks
-            </h5>
-            <p>
-                Rp.21.000 | 01 Items
-            </p>
-        </div>
-        <div class="order-actions">
-            <button class="btn btn-warning">
-                Beri Ulasan
-            </button>
-            <button class="btn btn-outline-warning">
-                Order Lagi
-            </button>
-        </div>
-        <div class="order-id">
-            <p>
-                #240112
-            </p>
-        </div>
-    </div>
 
-    <!-- <div class="footer">
-        <div class="nav-item">
-            <i class="fas fa-home">
-            </i>
-            <p>
-                Beranda
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-heart">
-            </i>
-            <p>
-                Favorit
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-clipboard-list">
-            </i>
-            <p>
-                Pesanan
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-bell">
-            </i>
-            <p>
-                Notifikasi
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-user">
-            </i>
-            <p>
-                Akun
-            </p>
-        </div>
+    <!-- Filter Tabs -->
+    <!-- <div class="container mt-3">
+        <ul class="nav nav-pills nav-fill filter-tabs mb-3">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Semua</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Selesai</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Dibatalkan</a>
+            </li>
+        </ul>
     </div> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <!-- Riwayat Pesanan -->
+    <div class="container">
+        <!-- Pesanan Selesai -->
+        <div class="order-history-card">
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <strong>Pesanan #INV-20231210-003</strong>
+                    <small class="d-block text-muted">10 Des 2023, 12:45 WIB</small>
+                </div>
+                <span class="status-completed">Selesai</span>
+            </div>
+            <div class="order-details">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <span>Ayam Geprek Bensu</span>
+                        <small class="d-block text-muted">2x • Pedas Level 3</small>
+                    </div>
+                    <span>Rp 30.000</span>
+                </div>
+                <div class="d-flex justify-content-between mt-2">
+                    <strong>Total Pembayaran</strong>
+                    <strong>Rp 45.000</strong>
+                </div>
+                <div class="mt-2">
+                    <button class="btn btn-outline-secondary btn-sm w-100">
+                        Lihat Detail
+                    </button>
+                </div>
+            </div>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+        <!-- Pesanan Dibatalkan -->
+        <div class="order-history-card">
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <strong>Pesanan #INV-20231208-002</strong>
+                    <small class="d-block text-muted">08 Des 2023, 19:30 WIB</small>
+                </div>
+                <span class="status-cancelled">Dibatalkan</span>
+            </div>
+            <div class="order-details">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <span>Ayam Geprek Pedas</span>
+                        <small class="d-block text-muted">1x • Pedas Level 5</small>
+                    </div>
+                    <span>Rp 20.000</span>
+                </div>
+                <div class="d-flex justify-content-between mt-2">
+                    <strong>Total Pembayaran</strong>
+                    <strong>Rp 35.000</strong>
+                </div>
+                <div class="mt-2">
+                    <button class="btn btn-outline-secondary btn-sm w-100">
+                        Lihat Detail
+                    </button>
+                </div>
+            </div>
+        </div>
 
+        <!-- Pesanan Selesai Lainnya -->
+        <div class="order-history-card">
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <strong>Pesanan #INV-20231205-001</strong>
+                    <small class="d-block text-muted">05 Des 2023, 20:15 WIB</small>
+                </div>
+                <span class="status-completed">Selesai</span>
+            </div>
+            <div class="order-details">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <span>Ayam Geprek Original</span>
+                        <small class="d-block text-muted">1x • Tanpa Pedas</small>
+                    </div>
+                    <span>Rp 15.000</span>
+                </div>
+                <div class="d-flex justify-content-between mt-2">
+                    <strong>Total Pembayaran</strong>
+                    <strong>Rp 25.000</strong>
+                </div>
+                <div class="mt-2">
+                    <button class="btn btn-outline-secondary btn-sm w-100">
+                        Lihat Detail
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
