--- a/notifikasi_pesan.html
+++ b/notifikasi_pesan.html
@@ -35,7 +35,6 @@
                     </li>
                     <li class="nav-item d-flex align-items-center">
                         <a class="nav-link" href="keranjang.html">Keranjang</a>
-                        <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
                     </li>
                 </ul>
             </div>
@@ -59,9 +58,11 @@
                             <i class="fas fa-motorcycle text-primary fa-2x"></i>
                         </div>
                         <div class="flex-grow-1">
+                            <a class="text-decoration-none text-dark" href="pesan.html">
                             <h6 class="mb-1">Pesanan Sedang Dalam Perjalanan</h6>
                             <p class="text-muted mb-1">Driver Budi sedang menuju lokasi Anda</p>
                             <span class="notification-time">Baru saja</span>
+                        </a>
                         </div>
                         <div>
                             <i class="fas fa-chevron-right text-muted"></i>
