--- a/pesan.html
+++ b/pesan.html
@@ -1,52 +1,98 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat dengan Driver</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style css/navbar.css">
     <link rel="stylesheet" href="style css/pesan.css">
+
 </head>
 <body>
-    <div class="header">
-        <a href="notifikasi_pesan.html">
-        <i class="fas fa-arrow-left back-icon" ></i>
-        </a>
-        <div class="profile-pic"></div>
-        <div>
-            <div class="name">Agus</div>
-            <div class="status">Driver</div>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <span class="speed-text">Speed</span>
+                <span class="dish-text">Dish</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="akun.html">Akun</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="keranjang.html">Keranjang</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <i class="fas fa-phone-alt call-icon"></i>
+    </nav>
+
+    <div class="container chat-container">
+        <div class="chat-messages" id="chatMessages">
+            <!-- Pesan dari user -->
+            <div class="message user">
+                <div class="content">Halo, apakah pesanan saya sudah diantar?</div>
+            </div>
+            <!-- Pesan dari driver -->
+            <div class="message driver">
+                <div class="content">Halo, saya sedang dalam perjalanan ke lokasi Anda.</div>
+            </div>
+        </div>
+        <div class="chat-input">
+            <div class="input-group">
+                <input type="text" id="chatInput" class="form-control" placeholder="Ketik pesan...">
+                <button class="btn btn-primary" id="sendButton" style="background-color: #8e2d16; border: none;">Kirim</button>
+            </div>
+        </div>
     </div>
-    <div class="message-container">
-        <div class="message sent">
-            <div class="time">8:10 pm</div>
-            <div class="text">Mas, masih lama?</div>
-            <div class="profile-pic"></div>
-        </div>
-        <div class="message received">
-            <div class="profile-pic"></div>
-            <div class="text">Masih nunggu mba</div>
-            <div class="time">8:11 pm</div>
-        </div>
-        <div class="message sent">
-            <div class="time">8:11 pm</div>
-            <div class="text">Taruh depan pintu aja mas</div>
-            <div class="profile-pic"></div>
-        </div>
-        <div class="message received">
-            <div class="profile-pic"></div>
-            <div class="text">Oke Siap</div>
-            <div class="time">8:12 pm</div>
-        </div>
-        <div class="message sent">
-            <div class="time">8:12 pm</div>
-            <div class="text">Terima Kasih mas</div>
-            <div class="profile-pic"></div>
-        </div>
-    </div>
-    <div class="input-container">
-        <i class="far fa-smile"></i>
-        <input type="text" class="input" placeholder="Write somethings">
-        <i class="fas fa-paper-plane send-icon"></i>
-    </div>
+
+    <script>
+        const chatMessages = document.getElementById('chatMessages');
+        const chatInput = document.getElementById('chatInput');
+        const sendButton = document.getElementById('sendButton');
+
+        sendButton.addEventListener('click', () => {
+            const messageText = chatInput.value.trim();
+            if (messageText) {
+                // Tambahkan pesan user ke chat
+                const userMessage = document.createElement('div');
+                userMessage.className = 'message user';
+                userMessage.innerHTML = `<div class="content">${messageText}</div>`;
+                chatMessages.appendChild(userMessage);
+
+                // Bersihkan input
+                chatInput.value = '';
+
+                // Scroll ke bawah
+                chatMessages.scrollTop = chatMessages.scrollHeight;
+
+                // Simulasi balasan driver
+                setTimeout(() => {
+                    const driverMessage = document.createElement('div');
+                    driverMessage.className = 'message driver';
+                    driverMessage.innerHTML = '<div class="content">Pesanan Anda hampir sampai!</div>';
+                    chatMessages.appendChild(driverMessage);
+                    chatMessages.scrollTop = chatMessages.scrollHeight;
+                }, 1000);
+            }
+        });
+    </script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
