--- a/daftar_resto.html
+++ b/daftar_resto.html
@@ -126,7 +126,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card restaurant-card shadow">
                     <div class="rating">4.9 <i class="bi bi-star-fill"></i></div>
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Restoran 3">
+                    <img src="image/restoran/dr.jpg" class="card-img-top" alt="Restoran 3">
                     <div class="card-body">
                         <h5 class="card-title">Restoran C</h5>
                         <p class="card-text">Beragam pilihan hidangan Asia yang kaya rasa.</p>
