--- a/daftar_resto.html
+++ b/daftar_resto.html
@@ -52,7 +52,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card restaurant-card shadow">
                     <div class="rating">4.8 <i class="bi bi-star-fill"></i></div>
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Restoran 1">
+                    <img src="image/restoran/seribu rasa.jpg" class="card-img-top" alt="Restoran 1">
                     <div class="card-body">
                         <h5 class="card-title">Restoran A</h5>
                         <p class="card-text">Masakan khas Indonesia yang lezat dan menggugah selera.</p> <a
@@ -67,7 +67,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card restaurant-card shadow">
                     <div class="rating">4.6 <i class="bi bi-star-fill"></i></div>
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Restoran 2">
+                    <img src="image/restoran/seafood.jpg" class="card-img-top" alt="Restoran 2">
                     <div class="card-body">
                         <h5 class="card-title">Restoran B</h5>
                         <p class="card-text">Nikmati hidangan Barat dengan cita rasa autentik.</p>
@@ -82,7 +82,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card restaurant-card shadow">
                     <div class="rating">4.9 <i class="bi bi-star-fill"></i></div>
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Restoran 3">
+                    <img src="image/restoran/kebab.jpg" class="card-img-top" alt="Restoran 3">
                     <div class="card-body">
                         <h5 class="card-title">Restoran C</h5>
                         <p class="card-text">Beragam pilihan hidangan Asia yang kaya rasa.</p>
@@ -96,7 +96,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card restaurant-card shadow">
                     <div class="rating">4.8 <i class="bi bi-star-fill"></i></div>
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Restoran 1">
+                    <img src="image/restoran/java.jpg" class="card-img-top" alt="Restoran 1">
                     <div class="card-body">
                         <h5 class="card-title">Restoran A</h5>
                         <p class="card-text">Masakan khas Indonesia yang lezat dan menggugah selera.</p> <a
@@ -111,7 +111,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card restaurant-card shadow">
                     <div class="rating">4.6 <i class="bi bi-star-fill"></i></div>
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Restoran 2">
+                    <img src="image/restoran/indonesia.jpg" class="card-img-top" alt="Restoran 2">
                     <div class="card-body">
                         <h5 class="card-title">Restoran B</h5>
                         <p class="card-text">Nikmati hidangan Barat dengan cita rasa autentik.</p>
