--- a/index.html
+++ b/index.html
@@ -304,10 +304,12 @@
         <!-- Voucher Button -->
         <div class="ticket-card" style="background-color: #ffc107;">
             <i class="fas fa-ticket-alt fa-2x" style="color: #fff;"></i>
+            <a class="navbar-brand d-flex align-items-center" href="voucher.html">
             <div class="ticket-text">
                 <h6 class="text-dark mb-1">Klaim Voucher</h6>
                 <p class="text-dark small mb-0">Cek Disini</p>
             </div>
+        </a>
         </div>
     </div>
 </div>
