--- a/notifikasi_pesan.html
+++ b/notifikasi_pesan.html
@@ -42,7 +42,7 @@
     </nav>
 
     <div class="container mt-2">
-        <!-- Header Favorit -->
+        <!-- Header Notif -->
         <div class="container-fluid bg-white shadow-sm py-3 mb-3">
             <div class="container d-flex align-items-center">
                 <a href="#" class="text-dark me">
