--- a/edit_profil.html
+++ b/edit_profil.html
@@ -98,10 +98,10 @@
                     Riwayat Pesanan
                     <i class="fas fa-chevron-right text-muted"></i>
                 </a>
-                <a href="metode_bayar.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <!-- <a href="metode_bayar.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                     Metode Pembayaran
                     <i class="fas fa-chevron-right text-muted"></i>
-                </a>
+                </a> -->
                 <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                     Pengaturan
                     <i class="fas fa-chevron-right text-muted"></i>
