--- a/menu-utama.html
+++ b/menu-utama.html
@@ -41,7 +41,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <a class="navbar-brand d-flex align-items-center" href="menu-utama.html">
                 <span class="speed-text">Speed</span>
                 <span class="dish-text">Dish</span>
             </a>
@@ -50,7 +50,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="menu-utama.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
                     <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
                     <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
