--- a/akun.html
+++ b/akun.html
@@ -107,7 +107,7 @@
                     Pengaturan
                     <i class="fas fa-chevron-right text-muted"></i>
                 </a>
-                <a href="login-register.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center text-danger">
+                <a href="index.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center text-danger">
                     Keluar
                     <i class="fas fa-sign-out-alt text-danger"></i>
                 </a>
