--- a/edit_profil.html
+++ b/edit_profil.html
@@ -26,7 +26,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="menu-utama.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
                         <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
                         <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
